# Triangulation

./: CMakeLists.txt  PolygonTriangulation.h  main.cpp  mainCOPY.cpp
